[package]
name = "sims"
version = "0.1.0"
edition = "2021"
description = "Simplistic string search"
authors = ["David Pépin <oss@infiniticks.io>"]
license = "MIT"
repository = "https://github.com/infiniticks/sims"
readme = "README.md"
homepage = "https://github.com/infiniticks/sims"

[dependencies]
smallvec = "1.13"